row and cell added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Sexaaaaaaaa
-    balsal
+    <div>
+        <div class="col">
+            <div class="cell">a</div>
+            <div class="cell">b</div>
+            <div class="cell">c</div>
+            <div class="cell">d</div>
+        </div>
+    </div>
 </body>
 </html>
