top banner added

--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASM Shuvo portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div>
-        <div class="col">
-            <div class="cell">a</div>
-            <div class="cell">b</div>
-            <div class="cell">c</div>
-            <div class="cell">d</div>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1> WELCOME TO</h1>
+            <h1> <span>Wizard</span>'s world!!!</h1>
+            <h3> Clash of clans reguler powerful troop</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ut, veniam rerum quo quae eligendi
+                similique quod maxime quaerat sed aspernatur aperiam et. Dolorem distinctio quia praesentium
+                voluptatibus
+                reiciendis cupiditate.</p>
+            <a class="link-btn" href="wizardknowledge.com" target="blank">HIRE ME</a>
         </div>
-    </div>
+
+        <div class="half-width">
+            <img src="C:\Projects\developer portfolio\images" alt="">
+        </div>
+
+    </section>
+
+
+
 </body>
+
 </html>
