--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <!--photopea use kore pic edit korechi-->
     <section class="top-banner">
         <div class="half-width">
             <h1> WELCOME TO</h1>
@@ -26,10 +27,30 @@
         </div>
 
         <div class="half-width">
-            <img src="C:\Projects\developer portfolio\images" alt="">
+            <img src="images/my pic.png" alt="">
         </div>
 
     </section>
+
+    <section class="dream-big">
+        <div>
+            <img src="images/super-wizard-explain-removebg-preview.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1> Dream Big</h1>
+            <h3> Become a Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, odio ratione. Perferendis, dolor est
+                doloremque eveniet beatae unde, dolore minima tenetur, repellendus accusamus in nostrum nisi animi
+                nesciunt delectus! Facere explicabo debitis, consequatur possimus esse perspiciatis et minus porro.
+                Officia, deserunt. Sit ut vitae id vel optio quibusdam enim veniam?
+            </p>
+            <a class="link-btn" href="wizardknowledge.com" target="blank">DOWNLOAD RESUME</a>
+
+
+
+        </div>
+    </section>
+
 
 
 
