experience part added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!--photopea use kore pic edit korechi-->
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1> WELCOME TO</h1>
             <h1> <span>Wizard</span>'s world!!!</h1>
@@ -32,7 +32,7 @@
 
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div>
             <img src="images/super-wizard-explain-removebg-preview.png" alt="">
         </div>
@@ -51,6 +51,30 @@
         </div>
     </section>
 
+    <hr>
+    <section class="experiance area">
+        <h1>Experiances:</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Dev</h1>
+                <h3>2022-present | Pro Level Developer</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem perferendis ad aperiam rerum
+                    adipisci
+                    quo cumque sint placeat reprehenderit quidem?</p>
+
+            </div>
+
+            <div class="half-width">
+                <h1>Front End Web Dev</h1>
+                <h3> 2019-2021 | Bsaic Web Developer</h3>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum repellat vitae maiores nobis rerum.
+                Perferendis, reiciendis omnis. Nisi perspiciatis voluptatibus magnam itaque, tenetur harum commodi ut
+                sequi
+                doloremque, quis eaque.
+            </div>
+        </div>
+
+    </section>
 
 
 
